# data_dynamos_exercise

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  dbt_project.yml  packages.yml  profiles.yml  pyproject.toml
Streamlit_local/: GLOBALTEMPERATURES_SAMPLE.csv  readme.md
Streamlit_local/Streamlit/: Exercise-1.py  Exercise-2.py  Exercise-3.py  Exercise-4.py  Exercise-5.py  app.py
Streamlit_local/Transformation/: Exercise-1.py  Exercise-2.py  Exercise-3.py  Exercise-4.py  Exercise-5.py  Exercise-6.py  Exercise-7.py  Exercise-8.py  data_processing.py  global_temp.py  temp_by_country.py
Streamlit_local/output/: STG_GLOBAL_TEMPERATURES.csv
Streamlit_local/processed_output/: aggregate_country_emissions_temperatures.csv  aggregate_country_temperatures.csv  aggregate_global_emissions.csv  aggregate_global_emissions_temperatures.csv  aggregate_global_temperatures.csv  co2_emissions_and_temperatures_by_country.csv  co2_emissions_by_country.csv  europe_big_three_emissions.csv
data_ingestion/: dbt_project.yml  packages.yml  profiles.yml
data_ingestion/macros/: create_user_environment.sql  drop_user_environment.sql
data_ingestion/models/: sources.yml
data_transformation/: dbt_project.yml  profiles.yml
data_visualization/: DataDynamos.py  Exercise_1.py  app.py
docs/: publishing-docker-image.md
macros/: replace_invalid_chars.sql
modelling/: dbt_project.yml  profiles.yml
scripts/: streamlit_snowflake_bash_setup.sh  streamlit_snowflake_setup.sh  streamlit_snowflake_startup.sh  streamlit_snowflake_zsh_setup.sh
snowflake-app/: streamlit_app.py
(+46 files in other folders)
