[tool.poetry]
name = "data_dynamos_exercise"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.16"
dbt-core = "^1.5.2"
dbt-snowflake = "^1.5.2"
streamlit = "^1.24.1"


[tool.poetry.group.dev.dependencies]
pry-py = "^0.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
